objects/Document__c.object
<CustomObject>
    <fields>
        <fullName>Access__c</fullName>
        <label>Access</label>
        <picklist>
            <picklistValues>
                <fullName>FULL_CONTROL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>public-read</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WRITE</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to provide access to documents on the account level</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Documents</relationshipLabel>
        <relationshipName>Documents1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to agreement</description>
        <label>Agreement</label>
        <referenceTo>echosign_dev1__SIGN_Agreement__c</referenceTo>
        <relationshipLabel>Documents</relationshipLabel>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bucket_Name__c</fullName>
        <label>Bucket Name</label>
        <length>122</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Type__c</fullName>
        <label>Content Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Commercial:
Field created to link document (attachments) to the design object record</description>
        <label>Design</label>
        <referenceTo>Design__c</referenceTo>
        <relationshipLabel>Documents</relationshipLabel>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Document_Link__c</fullName>
        <formula>HYPERLINK(&apos;https://&apos; + Bucket_Name__c + &apos;.s3.amazonaws.com/&apos;&amp; File_Name__c , File_Name__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <description>Field for TPS - this field will be used to identify the documents uploaded by TPS or any other partner</description>
        <label>Document Type</label>
        <picklist>
            <picklistValues>
                <fullName>12 Month Utility Bills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACP5 - Asbestos Inspection Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alliance Rebate Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANSI C12 Certified Meter Worksheet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appendix A - NY State Interconnection Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appendix B and C - NY State Interconnection Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aurora Deliverables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certificate of Acceptance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Design Deliverables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commissioning Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete Design Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed ICF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed Incentive Claim Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed SRP Final As-Built Worksheet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditional Final LW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditional Lien Waiver - DRIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditional Lien Waiver - DRIP (Interconnect)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditional Lien Waiver - IP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditional Lien Waiver - IP (Interconnect)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditional Progress LW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed ICF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed Rebate Reservation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed Rebate Resv</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Copy of Property Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Countersigned Attachment Rebate Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Countersigned Rebate Reservation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Countersigned Schedule A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Countersigned SREC Reservation Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Acceptance Form</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Extension__c</fullName>
        <description>The extension type of the document. (.pdf,.doc.xls,etc...)</description>
        <label>Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Name__c</fullName>
        <label>File Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Type__c</fullName>
        <label>File Type</label>
        <picklist>
            <picklistValues>
                <fullName>DXF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PDF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JSON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XML</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Financial_Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial Payment</label>
        <referenceTo>LeasePayment__c</referenceTo>
        <relationshipLabel>Documents</relationshipLabel>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_Document_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>When the template is applied to an active project any Document record associated to an IDD will turn into an ICD record instead of a Document record.</description>
        <label>Invoice Document Data</label>
        <referenceTo>Invoice_Document_Data__c</referenceTo>
        <relationshipLabel>Documents</relationshipLabel>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Document__c</fullName>
        <description>It&apos;s field to store the OppId + documentType on a unique field. By doing this, We can make documentType unique for a particular Opportunity. It&apos;s created to avoid the custom trigger coding and test classes to cover that.</description>
        <label>Quote-Document</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>TPS: Lookup to Opportunity to capture the document for related Opportunity</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Documents</relationshipLabel>
        <relationshipName>Documents1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Project Name: Residential Installation Management 
Requester: Priti Rastogi 
This field connects the document to a project task.</description>
        <label>Project Task</label>
        <referenceTo>Project_Task__c</referenceTo>
        <relationshipLabel>Documents</relationshipLabel>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The quote this document is related to.</description>
        <label>Quote</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Quote.OpportunityId</field>
                <operation>equals</operation>
                <valueField>$Source.Opportunity__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Documents</relationshipLabel>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Residential_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Project Name: Residential Installation Management 
Requester: Priti Rastogi 
This field is programmatically populated for documents connected to an opportunity when a related residential project is created.</description>
        <label>Residential Project</label>
        <referenceTo>Residential_Project__c</referenceTo>
        <relationshipLabel>Documents</relationshipLabel>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Roof_Design__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to Documents in S3 associated with Roof Design object.</description>
        <label>Roof Design</label>
        <referenceTo>Roof_Design__c</referenceTo>
        <relationshipLabel>Documents</relationshipLabel>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <description>The url sent from Spectrum to access the document.</description>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>Document</label>
    <nameField>
        <label>Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Documents</pluralLabel>
    <recordTypes>
        <fullName>Document</fullName>
        <active>true</active>
        <label>Document</label>
    </recordTypes>
    <recordTypes>
        <fullName>S3_Document</fullName>
        <active>true</active>
        <label>S3 Document</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>